MDEV-5789: race between rpl_parallel_change_thread_count and slave start upon server start without --skip-slave-start

Make sure to signal the condition variable for the thread pool after
the new threads have been added to the pool.

Thanks to user nanyi607rao, who reported this bug on maria-developers@.